# tool-incorporation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/conf/: cloudPath.ini  cloudsPath.ini  configMPC.ini  configSimMPC.ini  objects3DExplorer.ini  toolExplorer.ini  toolFeatExt.ini  toolIncorporator.ini
app/modules/: merge_point_clouds.xml  object-reconstruction.xml
app/plugins/: center_pm.lua
app/sampleClouds/real/: HOE1.pcd  HOK1.pcd  RAK1.pcd  RAK3.pcd  SHO1.pcd  SHO3.pcd  STI2.pcd  greenRakeStd.pcd  hook.pcd  pipeHoe1.pcd  pipeHoe2.pcd  pipeHoe3.pcd  pipeHook1.pcd  pipeHook2.pcd  pipeHook3.pcd  rake.pcd  rakeBigBlue.pcd  rakeBlue.pcd  rakeGreen.pcd  realStick1.pcd  realStick2.pcd  realStick3.pcd  redRakeStd.pcd  shovelGreen.ply  shovelOrange.pcd  shovelOrange.ply  shovelYellow.ply
app/sampleClouds/sim/: flatTop_ICRA.pcd  hoe0.pcd  hoe1.pcd  hoe2.pcd  hoe3.pcd  hoe4.pcd  hoe5.pcd  hoe6.pcd  hoe7.pcd  hoe8.pcd  hoe9.pcd  hok0.pcd  hok3.pcd  hok4.pcd  hok5.pcd  hok6.pcd  hok7.pcd  hok9.pcd  hook1.pcd  hook2.pcd  hook8.pcd
app/scripts/: objectFusion3DAPP.xml.template  objectFusion3DlbpAPP.xml.template  objects3DModelerAPP.xml.template  objects3DModelerSimAPP.xml.template  tariq.xml  toolExplorerAPP.xml  toolExplorerSimAPP.xml  toolIncorporationAPP.xml.template  toolIncorporation_APP_SIM.xml.template  toolRecognizer_APP.xml.template
data/: explorationAngles.txt
data/3Dobject/: 3Dobject2.ply  3Dobject4.ply  3Dobject8.ply  3Dobject9.ply
data/dataNew/: blueRake10.ply  blueRake7.ply  blueRake9.ply  greenRakeXX3.ply  greenRakeXX6.ply  greenRakeXX7.ply  greenRakeXX8.ply  hoe1.ply  hoe3.ply  hoe4.ply  redRake3.ply
data/dataNorm/: greenRake0.ply  greenRake1.ply  greenRake2.ply  greenRake20.ply  greenRake21.ply  greenRake22.ply  greenRake23.ply  greenRake24.ply  greenRake25.ply  greenRake3.ply  greenRake4.ply  greenRake5.ply  greenRakeStd.pcd  hoeBlue0.ply  hoeBlue1.ply  hoeBlue2.ply  hoeBlue3.ply  hoeBlue4.ply  hoeBlue5.ply  hoeBlue6.ply  hoeBlue7.ply  hoeBlue8.ply  plyQualities.txt  rakeBlue0.ply  rakeBlue1.ply  rakeBlue10.ply  rakeBlue2.ply  rakeBlue3.ply  rakeBlue4.ply  rakeBlue5.ply  rakeBlue6.ply  rakeBlue7.ply  rakeBlue8.ply  rakeBlue9.ply  rakeGreen0.ply  rakeGreen1.ply  rakeGreen2.ply  rakeGreen3.ply  rakeGreen4.ply  rakeGreen5.ply  (+9 more)
data/dataNorm/greenRake2_norm/: greenRake2_norm1.ply
data/dataNorm/hoeBlue_norm/: hoeBlue_norm0.ply  hoeBlue_norm2.ply
data/dataNorm/norm/: greenRake2_norm0.ply  hoeBlue_norm1.ply  hoeBlue_norm4.ply  hoeBlue_norm7.ply  rakeBlue_norm0.ply  rakeBlue_norm4.ply  rakeBlue_norm7.ply  rakeBlue_norm8.ply  redRake_norm7.ply
data/greenRake1/: 3Dobject11.ply
data/greenRake2/: 3Dobject0.ply  3Dobject1.ply  3Dobject3.ply  3Dobject4.ply  3Dobject7.ply
data/greenRake3/: cloud_merged.ply  greenRake10.ply  greenRake14.ply  greenRake16.ply  greenRake4.ply  greenRake7.ply  greenRake8.ply  greenRake9.ply
data/objs/: hoe.pcd  hook.pcd  rakeRoundy.pcd  stickSquare.pcd
data/sim_pcds/: flatTop.pcd  hoe.pcd  hook.pcd  rakeFlat.pcd  rakeRoundy.pcd  rakeSpikes.pcd  rakeWide.pcd  star.pcd  stickRound.pcd  stickSquare.pcd
data/skp/: flatTop.skb  hoe.skb  hoe.skp  hook.skb  hook.skp  rakeFlat.skb  rakeFlat.skp  rakeRoundy.mtl  rakeRoundy.skb  rakeSpikes.skb  rakeSpikes.skp  rakeWide.mtl  rakeWide.skb  rakeWide.skp  star.skb  star.skp  stickRound.skb  stickRound.skp  stickSquare.skb  stickSquare.skp
data50tools/modelData/: SKPtoPCD.txt
dataICRA2015_3D/: README.txt
libYarpCloud/: CMakeLists.txt
libYarpCloud/include/iCub/YarpCloud/: CloudUtils.h
libYarpCloud/src/: CloudUtils.cpp
mergeClouds/: CMakeLists.txt  mergeClouds.cpp  mergeClouds.xml
modelData/dataNorm/: blueRakeStd.pcd
modelData/plys/: plyQualities
modelData/sim_pcds/: Lstick.pcd  flatTop.pcd  hoe2.pcd  rakeSpikes.pcd  rakeWide.pcd  stickSquare.pcd
modelData/skp/: Lstick.skb  flatTop.skp  hoe.mtl  hoe.skb  hoe.skp  hoe2.skb  hoe2.skp  hoe4.skp  hoe7.skp  hoe8.skp  hook1.skp  hook2.skp  hook4.skp  hook5.skp  hook6.skp  hook7.skp  rake0.skp  rake5.skp  rake6.skp  rake7.skp  rake8.skp  rake9.skp  rakeFlat.skb  rakeFlat.skp  rakeRoundy.skb  rakeRoundy.skp  rakeWide.skb  shovel0.skp  shovel3.skp  shovel6.skp  shovel8.skp  star.skp  stick0.skp  stick4.skp  stick6.skp  stick7.skp  stickRound.skb  stickSquare.skb  stickSquare.skp
modelData/x/: hoe2.x
modules/objFus3D/: CMakeLists.txt  objFus3D.thrift  objFus3D.xml  objFus3D_thrift.cmake
modules/objFus3D/include/: objFus3D.h  objFus3D_IDLServer.h  visThread.h
modules/objFus3D/src/: objFus3D.cpp  objFus3D_IDLServer.cpp  visThread.cpp
modules/objects3DExplorer/: CMakeLists.txt  objects3DExplorer.xml
modules/objects3DExplorer/include/: objects3DExplorer.h
modules/objects3DExplorer/src/: objects3DExplorer.cpp
modules/show3D/: CMakeLists.txt  show3D.thrift  show3D.xml  show3D_thrift.cmake
modules/tool3Dshow/: CMakeLists.txt  tool3Dshow.thrift  tool3Dshow.xml
modules/toolExplorer/: CMakeLists.txt  toolExplorer.xml
modules/toolExplorer/include/: toolExplorer.h
modules/toolExplorer/src/: toolExplorer.cpp
modules/toolFeatExt/: CMakeLists.txt  toolFeatExt.xml  toolFeatures3D.thrift  toolFeatures3D_thrift.cmake
modules/toolIncorporator/: CMakeLists.txt  toolIncorporator.xml
modules/toolRecognizer/: toolRecognizer.thrift
tool3Dshow/: CMakeLists.txt  VisualizerCommands.txt  tool3Dshow.cpp  tool3Dshow.thrift  tool3Dshow.xml  tool3Dshow_thrift.cmake
tool3Dshow/include/: tool3Dshow.h  tool3Dshow_IDLServer.h  visThread.h
tool3Dshow/src/: tool3Dshow.cpp  tool3Dshow_IDLServer.cpp  visThread.cpp
toolExplorer/: CMakeLists.txt  main.cpp  toolExplorer.cpp  toolExplorer.xml
toolExplorer/include/: toolExplorer.h
toolExplorer/src/: toolExplorer.cpp
toolFeatExt/: CMakeLists.txt  toolFeatExt.cpp  toolFeatExt_main.cpp  toolFeatures3D.thrift  toolFeatures3D_thrift.cmake
toolFeatExt/include/: ToolFeat3D.h  ToolFeat3DwithOrient.h  VoxFeat.h  tool3DFeat_IDLServer.h  toolFeatExt.h
toolFeatExt/src/: ToolFeat3D.cpp  ToolFeat3DwithOrient.cpp  tool3DFeat_IDLServer.cpp  toolFeatExt.cpp
(+215 files in other folders)
